Revert "Disallow 'default' as indexing chain"